# flask-ai-server

./: .gitignore  README.md  main.py  model_utils.py  pyproject.toml  train.py
templates/: index.html
