[project]
name = "flask-ai-server"
version = "0.1.0"
description = "Sentiment analysis web app using DistilBERT fine-tuned on IMDB"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "flask>=3.1.0",
    "transformers>=4.49.0",
    "torch>=2.6.0",
    "datasets>=3.3.0",
    "accelerate>=1.3.0",
    "scikit-learn>=1.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
